--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "babel-preset-expo": "~8.1.0",
+    "expo-cli": "^3.20.1",
     "jest-expo": "~37.0.0"
   },
   "private": true
