--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@expo/webpack-config": "^0.12.4-alpha.0",
     "babel-preset-expo": "~8.1.0",
     "expo-cli": "^3.20.1",
-    "jest-expo": "~37.0.0"
+    "jest-expo": "~37.0.0",
+    "webpack-bundle-analyzer": "^3.7.0"
   },
   "private": true
 }
