--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start --web & npm run server",
+    "deploy:server": "firebase deploy",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "build:web": "expo build:web",
-    "build": "expo build",
     "eject": "expo eject",
     "test": "jest --watchAll",
     "server": "firebase emulators:start"
